--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,42 @@
+[flake8]
+ignore = W293, D401
+show-source = True
+statistics = False
+exclude =
+    .git,
+    __pycache__,
+    docs/source/conf.py,
+    tests/testfile.py
+    ./setup.py
+    old,
+    build,
+    dist
+include =
+    runp,
+    tests
+max-complexity = 10
+max-line-length=127
+
+[mypy]
+python_version = 3.7
+warn_return_any = True
+warn_unused_configs = True
+disallow_untyped_defs = True
+
+warn_unreachable = True
+strict_optional = True
+ignore_missing_imports = True
+
+disallow_any_generics = False
+check_untyped_defs = True
+show_none_errors = True
+
 # .coveragerc to control coverage.py
-[run]
+[coverage:run]
 branch = False
 command_line = -m unittest discover -b -v -s ./tests -p test.py 
 
-[report]
+[coverage:report]
 # Regexes for lines to exclude from consideration
 exclude_lines =
     # Have to re-enable the standard pragma
@@ -26,3 +59,4 @@ exclude_lines =
 
 ignore_errors = True
 omit = ./tests/testfile.py
+
